2010-03-04  Nate Chapin  <japhet@chromium.org>

Reviewed by Kenneth Rohde Christiansen.

        Fix the case where we do a same document navigation, scroll,
        then repeat the same document navigation.  Currently, the second
        navigation does nothing.

        https://bugs.webkit.org/show_bug.cgi?id=35547

        Test: fast/loader/repeat-same-document-navigation.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::loadInSameDocument): Call scrollToFragment() whether or not the hash changed.



Canonical link: https://commits.webkit.org/46852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55555 268f45cc-cd09-0410-ab3c-d52691b4dbfc